# FastAPI-jobs-webapp

./: .env_example  README.md  main.py  todo.txt
apis/: base.py
apis/version1/: route_general_pages.py  route_jobs.py  route_login.py
core/: config.py
db/: session.py
db/repository/: jobs.py  login.py
poetry-fastAPI-mk/: pyproject.toml
poetry-fastAPI-mk/tests/: test_poetry_fastapi_mk.py
schemas/: jobs.py
templates/auth/: login.html
templates/jobs/: create_job.html
templates/shared/: base.html
templates/users/: register_not_available.html
tests/: conftest.py
tests/test_routes/: test_jobs.py
webapps/: base.py
webapps/jobs/: route_jobs.py
webapps/users/: forms.py  route_users.py
