[tool.poetry]
name = "poetry-fastAPI-mk"
version = "0.1.0"
description = ""
authors = ["Mario Krajacic <krajacic.mario@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
Jinja2 = "^3.1.2"
aiofiles = "^0.8.0"
SQLAlchemy = "^1.4.36"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
pydantic = {extras = ["email"], version = "^1.9.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.28.0"
pytest = "^7.1.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
